--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <title>NY Mets Login Page</title>
 </head>
+
 <body>
     
+    <div class="login-box">
+        <img src="./Images/NY Mets Logo PNG.png" width="100px" alt="NY Mets logo">
+        <form>
+            <label for="username">Username</label><br>
+            <input type="text" id="username" name="username" required><br>
+            <label for="password">Password</label> <br> 
+            <input type="type" id="password" name="password" required><br> 
+            <input type="submit" value="Submit">
+        </form>
+        <p><a href="https://www.mlb.com/" target="_blank">Forgot PW?</a></p>
+        <p><a href="https://www.mlb.com/" target="_blank">Forgot User?</p>   
+    </div>
 </body>
+
 </html>
