--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <input type="type" id="password" name="password" required><br> 
             <input type="submit" value="Submit">
         </form>
-        <p><a href="https://www.mlb.com/" target="_blank">Forgot Password?</a></p>
-        <p><a href="https://www.mlb.com/" target="_blank">Forgot User?</p>   
+        <p><a href="https://www.mlb.com/" target="_blank">Forgot Username?</a></p>
+        <p><a href="https://www.mlb.com/" target="_blank">Forgot Password?</p>   
     </div>
 </body>
 
