added a section to the bottom of the html file

--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 </head>
 
 <body>
-    
+
     <div class="login-box">
         <img src="./Images/NY Mets Logo PNG.png" width="100px" alt="NY Mets logo">
         <form>
             <label for="username">Username</label><br>
             <input type="text" id="username" name="username" required><br>
-            <label for="password">Password</label> <br> 
-            <input type="type" id="password" name="password" required><br> 
+            <label for="password">Password</label> <br>
+            <input type="type" id="password" name="password" required><br>
             <input type="submit" value="Submit">
         </form>
-        <p><a href="https://www.mlb.com/" target="_blank">Forgot Username?</a></p>
-        <p><a href="https://www.mlb.com/" target="_blank">Forgot Password?</p>   
+        <section>
+            <p><a href="https://www.mlb.com/" target="_blank">Forgot Username?</a></p>
+            <p><a href="https://www.mlb.com/" target="_blank">Forgot Password?</p>
+        </section>
     </div>
 </body>
 
