--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 
 <body>
-
+    <section class="container">
     <div class="login-box">
         <img src="./Images/NY Mets Logo PNG.png" width="100px" alt="NY Mets logo">
         <form>
@@ -23,10 +23,11 @@
             <section>
                 <p><a href="https://www.mlb.com/" target="_blank">Forgot Username?</a></p>
                 <p><a href="https://www.mlb.com/" target="_blank">Forgot Password?</p>
-            </section>
+            
         </form>
         
     </div>
+        </section>
 
 </body>
 
